# easy_markdown

./: .claudeignore  .gitignore  .gitmodules  .nsis-config.json  BUILD_VERIFICATION.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DPI_SWITCH_FIX_FINAL.md  DPI_SWITCH_REGRESSION.md  FIXES_COMPLETE.md  FIX_SUMMARY.md  IMMEDIATE_ACTION.md  PACKAGING_DIAGNOSTIC.md  README.md  SESSION_SUMMARY.md  TODO  VERIFICATION.md  VERIFICATION_STEPS.md  build_on_linux.sh  build_on_win.bat  build_pack_on_win.bat  pack_on_win.bat  simple_test.md  test_content.md  test_exe.py  test_launch.ps1  test_qt.cpp
.claude/: settings.local.json  task.md
app/: CMakeLists.txt  ChangelogDialog.cpp  MainWindow.cpp  MainWindow.h  main.cpp
claude/: task.md
debian/: changelog  control  copyright  rules
docs/: architecture.md  build.md  requirements.md  构建说明.md
installer/: EasyMarkdown.nsi  SimpleMarkdown.nsi  build_installer.bat  collect_dist.py
plans/: 2026-04-13-Frontmatter渲染.md  2026-04-13-Linux深色主题检测.md  2026-04-13-P3远期功能Backlog.md  2026-04-13-主题插件系统.md  2026-04-13-会话恢复光标与折叠.md  2026-04-13-单元测试覆盖.md  2026-04-13-导出增强.md  2026-04-13-崩溃报告收集.md  2026-04-13-性能监控工具.md  2026-04-13-打包脚本自动调用编译.md  2026-04-13-拖拽无后缀文本文件.md  2026-04-13-搜索高亮亮黄色.md  2026-04-13-文档统计信息.md  (+28 more)
src/editor/: BandBuffer.cpp  BandBuffer.h  CMakeLists.txt  EditorInput.cpp  EditorInput.h  EditorLayout.cpp  EditorLayout.h  EditorPainter.cpp  EditorPainter.h  EditorWidget.cpp  EditorWidget.h  GutterRenderer.cpp  GutterRenderer.h  SearchBar.cpp  SearchBar.h  SearchWorker.cpp  SearchWorker.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h
(+243 files in other folders)
